--- a/src/index.css
+++ b/src/index.css
@@ -443,6 +443,13 @@
     background-repeat: no-repeat;
   }
 
+  /* Tablet portrait mode - adjust combo card background position */
+  @media screen and (max-width: 1366px) and (orientation: portrait) {
+    .product-showcase-card-mini.product-showcase-card-full-width .product-showcase-card-background {
+      background-position-x: -385px;
+    }
+  }
+
 
   .product-showcase-card-content {
     @apply relative z-10 p-8 h-full flex flex-col justify-center items-center text-center;
