--- a/src/index.css
+++ b/src/index.css
@@ -446,7 +446,7 @@
   /* Tablet portrait mode - adjust combo card background position */
   @media screen and (max-width: 1366px) and (orientation: portrait) {
     .product-showcase-card-mini .product-showcase-card-background {
-      background-position-x: -385px;
+      background-position-x: -385px !important;
     }
   }
 
