Test 25% reduction in combo card background size for tablet portrait

--- a/src/index.css
+++ b/src/index.css
@@ -447,6 +447,7 @@
   @media screen and (max-width: 1366px) and (orientation: portrait) {
     .product-showcase-card-mini .product-showcase-card-background {
       background-position-x: -385px !important;
+      background-size: 75% auto !important;
     }
   }
 
