--- a/src/index.css
+++ b/src/index.css
@@ -446,8 +446,9 @@
   /* Tablet portrait mode - adjust combo card background position */
   @media screen and (max-width: 1366px) and (orientation: portrait) {
     .product-showcase-card-mini .product-showcase-card-background {
-      background-position-x: -385px !important;
-      background-size: 75% auto !important;
+      background-position-x: -175px !important;
+      background-size: 140% auto !important;
+      background-color: black;
     }
   }
 
